--- a/index.html
+++ b/index.html
@@ -3,147 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360 Photo Viewer</title>
+    <title>全景图片展示</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
-        .navigation {
+        .controls {
             position: fixed;
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 1;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
         }
-        .navigation button {
-            margin: 0 5px;
+        .controls button {
             padding: 10px 20px;
             font-size: 16px;
         }
-        .hotspot {
-            position: absolute;
-            z-index: 2;
-            width: 20px;
-            height: 20px;
-            background-color: red;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-        .fade-in {
+        .fade {
             opacity: 0;
             transition: opacity 1s ease-in-out;
         }
-        .fade-in.show {
+        .fade.show {
             opacity: 1;
         }
     </style>
 </head>
 <body>
-    <div class="navigation">
-        <button onclick="navigatePhoto(-1)">Previous</button>
-        <button onclick="navigatePhoto(1)">Next</button>
+    <div class="controls">
+        <button onclick="navigate(-1)">上一张</button>
+        <button onclick="navigate(1)">下一张</button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
     <script>
-        let scene, camera, renderer, sphere, controls;
-        let currentTexture, nextTexture;
-        let hotspotElements = [];
-        let currentPhotoIndex = 1;
+        let scene, camera, renderer, sphere;
+        let currentTexture;
         const photoCount = 9;
-
-        const hotspotDefinitions = {
-            1: [{ position: { x: 200, y: 0, z: 300 }, nextPhoto: 2 }],
-            2: [
-                { position: { x: -200, y: 0, z: -300 }, nextPhoto: 1 },
-                { position: { x: 200, y: 0, z: 300 }, nextPhoto: 3 },
-            ],
-            3: [
-                { position: { x: -200, y: 0, z: -300 }, nextPhoto: 2 },
-                { position: { x: 200, y: 0, z: 300 }, nextPhoto: 4 },
-            ],
-            4: [
-                { position: { x: -200, y: 0, z: -300 }, nextPhoto: 3 },
-                { position: { x: 200, y: 0, z: 300 }, nextPhoto: 5 },
-            ],
-            5: [
-                { position: { x: -200, y: 0, z: -300 }, nextPhoto: 4 },
-                { position: { x: 200, y: 0, z: 300 }, nextPhoto: 6 },
-            ],
-            6: [
-                { position: { x: -200, y: 0, z: -300 }, nextPhoto: 5 },
-                { position: { x: 200, y: 0, z: 300 }, nextPhoto: 7 },
-            ],
-            7: [
-                { position: { x: -200, y: 0, z: -300 }, nextPhoto: 6 },
-                { position: { x: 200, y: 0, z: 300 }, nextPhoto: 8 },
-            ],
-            8: [
-                { position: { x: -200, y: 0, z: -300 }, nextPhoto: 7 },
-                { position: { x: 200, y: 0, z: 300 }, nextPhoto: 9 },
-            ],
-            9: [{ position: { x: -200, y: 0, z: -300 }, nextPhoto: 8 }]
-        };
-
-        init();
+        let currentPhotoIndex = 1;
 
         function init() {
-            // Scene setup
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
             renderer = new THREE.WebGLRenderer({ antialias: true });
             renderer.setSize(window.innerWidth, window.innerHeight);
             document.body.appendChild(renderer.domElement);
 
-            // Sphere setup
             const geometry = new THREE.SphereGeometry(500, 60, 40);
             geometry.scale(-1, 1, 1); // Invert the sphere
 
-            // Initial texture
-            currentTexture = new THREE.TextureLoader().load('p1.jpg', texture => {
-                console.log('Texture loaded successfully');
-                const material = new THREE.MeshBasicMaterial({ map: texture });
-                sphere = new THREE.Mesh(geometry, material);
-                scene.add(sphere);
+            const material = new THREE.MeshBasicMaterial({
+                map: new THREE.TextureLoader().load('p1.jpg', texture => {
+                    currentTexture = texture;
+                    sphere = new THREE.Mesh(geometry, material);
+                    scene.add(sphere);
+                })
             });
 
-            // Lighting setup
             const ambientLight = new THREE.AmbientLight(0xffffff, 1);
             scene.add(ambientLight);
 
-            const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
-            directionalLight.position.set(1, 1, 1).normalize();
-            scene.add(directionalLight);
-
-            // Controls
-            controls = new THREE.OrbitControls(camera, renderer.domElement);
-            controls.enableZoom = false;
-            controls.enablePan = false;
-            controls.rotateSpeed = 0.5;
-            controls.autoRotate = true;
-            controls.autoRotateSpeed = 0.5;
-
             camera.position.set(0, 0, 0.1);
 
-            // Key event listeners for navigation
+            window.addEventListener('resize', onWindowResize, false);
             document.addEventListener('keydown', onDocumentKeyDown, false);
 
-            // Add fade-in effect
-            renderer.domElement.classList.add('fade-in');
-            setTimeout(() => {
-                renderer.domElement.classList.add('show');
-            }, 50);
-
-            // Animation loop
             animate();
         }
 
         function animate() {
             requestAnimationFrame(animate);
-            controls.update();
             renderer.render(scene, camera);
         }
 
-        function navigatePhoto(direction) {
+        function navigate(direction) {
             const newPhotoIndex = (currentPhotoIndex - 1 + direction + photoCount) % photoCount + 1;
             changePhoto(newPhotoIndex);
         }
@@ -152,77 +85,39 @@
             if (photoIndex === currentPhotoIndex) return;
 
             const photo = `p${photoIndex}.jpg`;
-            const newHotspots = hotspotDefinitions[photoIndex];
 
-            // Fade out effect
-            renderer.domElement.classList.remove('show');
+            const fadeElement = document.createElement('div');
+            fadeElement.className = 'fade';
+            document.body.appendChild(fadeElement);
+            fadeElement.classList.add('show');
+
             setTimeout(() => {
-                if (sphere) {
-                    sphere.material.map.dispose(); // Clean up the old texture
-                }
-
+                currentTexture.dispose(); // Clean up the old texture
                 currentTexture = new THREE.TextureLoader().load(photo, texture => {
                     sphere.material.map = texture;
                     sphere.material.needsUpdate = true;
-                    clearHotspots();
-                    addHotspots(newHotspots);
-
-                    // Fade in effect
-                    renderer.domElement.classList.add('show');
                 });
 
+                document.body.removeChild(fadeElement);
                 currentPhotoIndex = photoIndex;
-            }, 1000); // Duration of the fade-out effect
-        }
-
-        function addHotspots(newHotspots) {
-            newHotspots.forEach(hotspot => {
-                const hotspotElement = document.createElement('div');
-                hotspotElement.className = 'hotspot';
-                document.body.appendChild(hotspotElement);
-
-                const vector = new THREE.Vector3(hotspot.position.x, hotspot.position.y, hotspot.position.z);
-                vector.project(camera);
-                const x = (vector.x * 0.5 + 0.5) * window.innerWidth;
-                const y = (-vector.y * 0.5 + 0.5) * window.innerHeight;
-                hotspotElement.style.left = `${x}px`;
-                hotspotElement.style.top = `${y}px`;
-
-                hotspotElement.addEventListener('click', () => {
-                    changePhoto(hotspot.nextPhoto);
-                });
-
-                hotspotElements.push(hotspotElement);
-            });
-        }
-
-        function clearHotspots() {
-            hotspotElements.forEach(element => {
-                if (document.body.contains(element)) {
-                    document.body.removeChild(element);
-                }
-            });
-            hotspotElements = [];
+            }, 1000);
         }
 
         function onDocumentKeyDown(event) {
-            switch (event.key) {
-                case 'w':
-                case 'W':
-                    navigatePhoto(1);
-                    break;
-                case 's':
-                case 'S':
-                    navigatePhoto(-1);
-                    break;
+            if (event.key === 'ArrowLeft') {
+                navigate(-1);
+            } else if (event.key === 'ArrowRight') {
+                navigate(1);
             }
         }
 
-        window.addEventListener('resize', () => {
+        function onWindowResize() {
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
-        });
+        }
+
+        init();
     </script>
 </body>
 </html>
